feat: add swagger coment
